# tcg_card_scanner

./: .gitignore  LICENSE  README.md  RELEASE.md  build.sh  docker-compose.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/services/: main.py
backend/app/services/normalizer/: normalizer.py
backend/app/services/ocr/: ocr.py
docs/: notebook.ipynb
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/services/: api.jsx
tcg_scanner/: Dockerfile  RELEASE.md  main.py  pyproject.toml
tcg_scanner/.devcontainer/: Dockerfile  devcontainer_sample.json
tcg_scanner/tcg_scanner/normalizer/: normalizer.py
tcg_scanner/tcg_scanner/swudb/: swudb.py
tcg_scanner/tcg_scanner/tools/ocr/: ocr.py
